[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/bass_catcher.gd" type="Script" id=1]
[ext_resource path="res://addons/musiclib/LegoBox/program_change_selector.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Roboto_Condensed-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/uwch.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 300
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 4 )

[node name="bass_catcher" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="sound_settings" type="VBoxContainer" parent="."]
margin_left = 56.0
margin_top = 31.0
margin_right = 306.0
margin_bottom = 671.0
rect_min_size = Vector2( 250, 100 )
custom_constants/separation = 30
alignment = 1

[node name="bass" type="VBoxContainer" parent="sound_settings"]
margin_top = 7.0
margin_right = 250.0
margin_bottom = 197.0

[node name="Label2" type="Label" parent="sound_settings/bass"]
margin_right = 250.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 20 )
custom_colors/font_color = Color( 0.482353, 0.486275, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Bass sound"
align = 1
valign = 1

[node name="bass_program_ob" type="OptionButton" parent="sound_settings/bass"]
margin_top = 28.0
margin_right = 250.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.482353, 0.486275, 1, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
script = ExtResource( 2 )
auto_select_first = false

[node name="bass_vol_sl" type="HSlider" parent="sound_settings/bass"]
margin_top = 62.0
margin_right = 250.0
margin_bottom = 102.0
rect_min_size = Vector2( 250, 40 )
max_value = 120.0
value = 80.0

[node name="octave_lbl" type="Label" parent="sound_settings/bass"]
margin_top = 106.0
margin_right = 250.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0.482353, 0.486275, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "octave"
align = 1
valign = 2

[node name="bass_octave_sl" type="HSlider" parent="sound_settings/bass"]
margin_top = 150.0
margin_right = 250.0
margin_bottom = 190.0
rect_min_size = Vector2( 250, 40 )
min_value = -2.0
max_value = 2.0

[node name="chords" type="VBoxContainer" parent="sound_settings"]
margin_top = 227.0
margin_right = 250.0
margin_bottom = 417.0

[node name="Label" type="Label" parent="sound_settings/chords"]
margin_right = 250.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 20 )
custom_colors/font_color = Color( 0.482353, 0.486275, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Chord sound"
align = 1
valign = 1

[node name="chords_program_ob" type="OptionButton" parent="sound_settings/chords"]
margin_top = 28.0
margin_right = 250.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.482353, 0.486275, 1, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
script = ExtResource( 2 )

[node name="chords_vol_sl" type="HSlider" parent="sound_settings/chords"]
margin_top = 62.0
margin_right = 250.0
margin_bottom = 102.0
rect_min_size = Vector2( 250, 40 )
max_value = 120.0
value = 80.0

[node name="chord playing speed" type="Label" parent="sound_settings/chords"]
margin_top = 106.0
margin_right = 250.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0.482353, 0.486275, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Chord speed"
align = 1
valign = 2

[node name="chord_speed_sl" type="HSlider" parent="sound_settings/chords"]
margin_top = 150.0
margin_right = 250.0
margin_bottom = 190.0
rect_min_size = Vector2( 250, 40 )
min_value = 0.05
max_value = 0.5
step = 0.0
value = 0.2

[node name="New_chord_Btn" type="Button" parent="sound_settings"]
margin_top = 447.0
margin_right = 250.0
margin_bottom = 489.0
hint_tooltip = "Pick a new chord
([N] or [Enter]"
custom_fonts/font = SubResource( 3 )
text = "New Note"
icon_align = 1

[node name="play_chord_Btn" type="Button" parent="sound_settings"]
margin_top = 519.0
margin_right = 250.0
margin_bottom = 561.0
hint_tooltip = "Play the current chord
[SPACE BAR] "
custom_fonts/font = SubResource( 3 )
text = "Play Note"
icon_align = 1

[node name="play_bass_Btn" type="Button" parent="sound_settings"]
margin_top = 591.0
margin_right = 250.0
margin_bottom = 633.0
hint_tooltip = "Reveal solution
and play bass note
[B] or [Tab]"
custom_fonts/font = SubResource( 3 )
text = "Reveal Bass"
icon_align = 1

[node name="bass_note_lbl" type="Label" parent="."]
margin_left = 688.0
margin_top = 233.0
margin_right = 1096.0
margin_bottom = 586.0
custom_fonts/font = SubResource( 4 )
text = "A"
align = 1
valign = 1

[node name="chord_name_lbl" type="Label" parent="."]
margin_left = 416.0
margin_top = 632.0
margin_right = 1224.0
margin_bottom = 680.0
rect_min_size = Vector2( 250, 40 )
custom_colors/font_color = Color( 0.482353, 0.486275, 1, 1 )
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="level_ob" type="OptionButton" parent="."]
margin_left = 416.0
margin_top = 120.0
margin_right = 1224.0
margin_bottom = 200.0
rect_min_size = Vector2( 260, 50 )
custom_fonts/font = SubResource( 7 )
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 432.0
margin_top = 56.0
margin_right = 1216.0
margin_bottom = 106.0
rect_min_size = Vector2( 400, 50 )
custom_colors/font_color = Color( 0.482353, 0.486275, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "[Return] or [N] to guess a new chord, [Space] key to listen, [TAB] or [B] to reveal the bass note"

[node name="tab_label" type="Label" parent="."]
margin_left = 416.0
margin_top = 256.0
margin_right = 672.0
margin_bottom = 616.0
rect_min_size = Vector2( 100, 100 )
custom_colors/font_color = Color( 0.482353, 0.486275, 1, 1 )
custom_fonts/font = SubResource( 9 )

[connection signal="pressed" from="sound_settings/New_chord_Btn" to="." method="_on_New_chord_Btn_pressed"]
[connection signal="pressed" from="sound_settings/play_chord_Btn" to="." method="_on_play_chord_Btn_pressed"]
[connection signal="pressed" from="sound_settings/play_bass_Btn" to="." method="_on_play_bass_Btn_pressed"]
[connection signal="item_selected" from="level_ob" to="." method="_on_level_ob_item_selected"]
